# swin-transformer

./: .gitignore  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
configs/: swin_v1_config.py
models/swin_v1/: patch_embedding.py  patch_merging.py  swin_transformer.py
models/swin_v1/swin_transformer_block/: mlp.py  swin_transformer_block.py  window_attention.py
notebooks/: SwinTransformer.ipynb  relative_position_bias.ipynb  workspace.ipynb
