[tool.poetry]
name = "swin-transformer"
version = "0.1.0"
description = "swin-transformer backbone from the scratch"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
urllib3 = "^2.2.3"
ipykernel = "^6.29.5"
torch = {version = "2.1.0", source = "pytorch-gpu-src"}
numpy = "1.26"
pandas = "^2.2.3"
tabulate = "^0.9.0"
pdfkit = "^1.0.0"
imgkit = "^1.2.3"
matplotlib = "3.9"
mmengine = "^0.10.5"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
